force-app/main/default/objects/SpiffPricing__c/SpiffPricing__c.object-meta.xml
<CustomObject>
    <description>Object to update the spiff for active products</description>
    <label>Spiffs</label>
    <nameField>
        <label>SpiffPricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SpiffPricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>