force-app/main/default/objects/SpiffPricing__c/fields/CDW__c.field-meta.xml
<CustomField>
    <fullName>CDW__c</fullName>
    <label>CDW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>