force-app/main/default/objects/SpiffPricing__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <label>Price Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>