force-app/main/default/objects/SpiffPricing__c/fields/Pricebookentryid__c.field-meta.xml
<CustomField>
    <fullName>Pricebookentryid__c</fullName>
    <label>Pricebookentryid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>