force-app/main/default/objects/SpiffPricing__c/fields/SPG__c.field-meta.xml
<CustomField>
    <fullName>SPG__c</fullName>
    <label>SPG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>